# mod-gathering-experience

./: CMakeLists.txt  README.md
conf/: mod_gathering_experience.conf  mod_gathering_experience.conf.dist
data/sql/db-world/: gathering_experience.sql
data/sql/db-world/base/: GatheringExperienceModule.sql
data/sql/db-world/updates/: .fishing_xp_rebalance.sql.swp  2024_03_17_gathering_experience_manta.sql  fishing_xp_rebalance.sql  fishing_xp_rebalance_cities.sql  gathering_experience_fishing.sql  gathering_experience_settings.sql  gathering_zone_multipliers.sql
src/: GatheringExperience.cpp  GatheringExperience.h  GatheringExperienceCommands.cpp  GatheringExperienceCommands.h  GatheringExperienceHooks.cpp  GatheringExperienceHooks.h  GatheringExperienceModule.cpp  GatheringExperienceScript.cpp  GatheringExperienceUtils.cpp  GatheringExperienceUtils.h  GatheringExperienceXPValues.cpp  GatheringExperienceXPValues.h  gem_loader.cpp
src/professions/: Fishing.cpp  Fishing.h  Herbalism.cpp  Herbalism.h  Mining.cpp  Mining.h  Skinning.cpp  Skinning.h
